# katalogue

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
API/: API.csproj  Dockerfile  Program.cs  appsettings.json
API.Test/: API.Test.csproj  UnitTest1.cs
API.Test/ServicesTest/: BookServerTest.cs  LibraryManagerServiceTest.cs  LibraryServiceTest.cs  UploadServiceTest.cs
API/Controllers/: BookSearchController.cs  LibraryController.cs  ReadController.cs  UploadController.cs
API/Data/: AppDbContext.cs
API/Migrations/: 20230722150456_Init.Designer.cs  20230722150456_Init.cs  20230724091925_make nullable.Designer.cs  20230724091925_make nullable.cs  20230828143454_add progress.Designer.cs  20230828143454_add progress.cs  20230904154717_user list.Designer.cs  20230904154717_user list.cs  20240930060942_use cover path instead of cover.Designer.cs  20240930060942_use cover path instead of cover.cs  20241011024328_add page count and last read.Designer.cs  20241011024328_add page count and last read.cs  20241011053837_add page count and last read.Designer.cs  20241011053837_add page count and last read.cs  (+1 more)
Client/: .gitignore  Dockerfile  README.md  components.json  katalogue.code-workspace  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.ts
assets/: main.css  tailwind.css
drizzle/: 0000_robust_vampiro.sql  0001_read history table.sql  0002_cover col.sql  0003_default read_status.sql  0004_odd_jimmy_woo.sql
src/: consts.ts  db.rs  main.rs  models.rs
(+129 files in other folders)
