[package]
name = "katalogue"
version = "0.1.0"
authors = ["sudhanv09 <mystogun125@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
epub = "2.1.5"
rusqlite = { version = "0.38", features = ["bundled"] }
base64 = "0.22"
regex = "1"
chrono = "0.4"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
